--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; URL='http://new-website.com'" />
+    <meta http-equiv="refresh" content="0; URL='https://papanirual.github.io/clanstats.html'" />
 </head>
 
 <body></body>
